@@ -18,7 +18,7 @@ whirlpooldeep \- Compute and compare Whirlpool message digests
 .B md5deep
 [\-m|\-M|\-x|\-X <file>]  [-a|-A <hash>] [\-f <file>]
 [\-p <size>] [\-i <size>] [\-tnwzresS0lbkqZud] [\-F<bum>] 
-[\-o <fbcplsd>]  [\-jnn] [[\fBFILES\fR]
+[\-o <fbcplsde>]  [\-jnn] [[\fBFILES\fR]
 
 .SH DESCRIPTION
 .PP
@@ -219,6 +219,8 @@ l \- Symbolic Links
 s \- Sockets
 .br
 d \- Solaris Doors
+.br
+e \- Windows PE executables
 
 .TP
 \fB-jnn\fR
